# Sanntid_C

./: .gitmodules  CMakeLists.txt  README.md
Src/: main.c
Src/lib/: assigner.h  assigner_bridge.d
cmake/: toolchain-d.cmake
